--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -8,10 +8,17 @@
 }
 
 body {
-  background: #F6F5FC;
+  background: $background-color;
   font-size: 16px;
 }
 
 button {
   cursor: pointer;
 }
+
+main {
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto;
+}
+
