--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,2 +1,5 @@
-$primary-color: #5061FC;
+$primary-color-main: #5061FC;
+$primary-color-lighter: #E0E3FF;
 $gray-200: #BCBCBC;
+$background-color: #F6F5FC;
+$text-color: #222;
