feature: Input, Button and Form components

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,5 +1,6 @@
 $primary-color-main: #5061FC;
 $primary-color-lighter: #E0E3FF;
+$primary-color-dark: #5061FC;
 $gray-200: #BCBCBC;
 $background-color: #F6F5FC;
 $text-color: #222;
