--- a/src/components/PageHeader/styles.module.scss
+++ b/src/components/PageHeader/styles.module.scss
@@ -1,6 +1,7 @@
 @import '../../assets/styles/variables.scss';
 
 .container {
+  margin-bottom: 24px;
   a {
     display: flex;
     align-items: center;
