--- a/src/components/Select/styles.module.scss
+++ b/src/components/Select/styles.module.scss
@@ -9,7 +9,7 @@
   outline: none;
   padding: 0 16px;
   font-size: 16px;
-  color: $gray-200;
+  color: $text-color;
   transition: border-color 0.2s ease-in;
 
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.04);
