--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,6 +1,13 @@
 $primary-color-main: #5061FC;
 $primary-color-lighter: #E0E3FF;
 $primary-color-dark: #5061FC;
+
 $gray-200: #BCBCBC;
+$gray-900: #222222;
+
 $background-color: #F6F5FC;
 $text-color: #222;
+
+$danger-color-light: #F97171;
+$danger-color-main: #FC5050;
+$danger-color-dark: #F63131;
