--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -1,6 +1,6 @@
 @import '../../assets/styles/variables.scss';
 
-.input {
+.Input {
   border: 2px solid #fff;
   width: 100%;
   background: #fff;
@@ -9,12 +9,18 @@
   outline: none;
   padding: 0 16px;
   font-size: 16px;
-  color: $gray-200;
+  color: $text-color;
   transition: border-color 0.2s ease-in;
+  appearance: none;
 
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.04);
 
   &:focus {
     border-color: $primary-color-main;
+  }
+
+  &__error{
+    color: $danger-color-main;
+    border-color: $danger-color-main !important;
   }
 }
